<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="texto_data">08/10/2018</string>
    <string name="texto_noticia">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper dapibus tortor, id sodales est dapibus id. Maecenas non tempor mi, ac congue nibh. Vivamus eget tempor dolor. Phasellus ut ipsum a risus dapibus luctus. Donec vel molestie mi. Duis tristique, leo porttitor ultricies finibus, mauris dui blandit nisi, in ullamcorper elit enim eget nibh. Etiam dictum varius molestie. Ut velit neque, ornare ac placerat vel, luctus vitae est. Fusce nec egestas metus. Donec ultrices vitae eros id posuere. Praesent mattis venenatis tortor, sed aliquam felis faucibus sit amet. Maecenas efficitur elementum diam et bibendum. Integer placerat et metus ac pulvinar. Quisque vel ullamcorper ante, a tincidunt sem. Sed sodales tempus bibendum. Donec et sapien nec ante ullamcorper gravida. Nullam magna dui, elementum non est vel, luctus imperdiet sem. Nam mollis posuere porttitor. Ut sodales turpis elit, et imperdiet lacus condimentum quis. Duis porttitor eget leo sit amet dignissim. Etiam tempus elit eu varius congue. In hac habitasse platea dictumst. Nam enim sem, tincidunt in posuere quis, suscipit id purus. In dictum turpis in massa congue rutrum. Integer ut arcu et ex tristique lobortis ornare ac sem. Phasellus facilisis finibus gravida. Sed pulvinar, mauris id efficitur imperdiet, leo ligula pharetra ex, vel scelerisque nulla nisl quis tortor. Sed scelerisque, urna in pretium vehicula, nisl erat tempor odio, at congue nisl tortor tristique purus. Nunc pharetra blandit sem, ut malesuada justo pulvinar a. Nullam placerat erat sit amet volutpat facilisis. Praesent tincidunt felis est, egestas gravida eros gravida in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod orci et ipsum dictum fringilla. Donec condimentum fermentum elementum. Sed tincidunt gravida congue. Aenean vestibulum dictum ante eget convallis. Donec ornare et dolor bibendum volutpat. Nulla eget mauris eget lorem ultrices sodales in vitae ante. Phasellus nulla ligula, efficitur in tempus nec, eleifend vitae sem. Donec vitae eleifend magna, nec sagittis urna. In blandit pulvinar mi, at aliquam tellus gravida nec. Vivamus pharetra odio mattis, pharetra lacus non, condimentum nisi. Proin dictum augue at bibendum scelerisque. Quisque eu magna eget ligula ultrices egestas at fringilla turpis. Etiam tempor placerat lacinia. Nam placerat quis neque vitae mollis. In egestas lacus eu elementum mattis. Donec eleifend tempor nibh, nec blandit libero pretium a. Curabitur id nisi libero. Duis a hendrerit metus. Fusce mattis, lacus et rhoncus pulvinar, neque sapien rhoncus tellus, a volutpat tellus arcu elementum nulla.</string>
    <string name="botao_anterior">Anterior</string>
    <string name="botao_proximo">Próximo</string>
    <string name="texto_autor">Giovani Dias Gomes</string>
    <string name="texto_titulo">Aprenda sobre edição de imagens</string>
    <string name="imagem_noticia">imagem de castelo</string>
</resources>
